--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.15)
 project(project_jj)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 
-add_executable(project_jj main.cpp DataTypes.cpp DataTypes.h Utils.cpp Utils.h)
+include_directories(.)
+
+add_executable(project_jj
+        DataTypes.cpp
+        DataTypes.h
+        main.cpp
+        Utils.cpp
+        Utils.h)
