Rvrt commit: 10e825d7a7ea6d4cf7e26ba5c1fa8d1e3569f178

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,6 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.13)
 project(project_jj)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 11)
 
-include_directories(.)
-
-add_executable(project_jj
-        DataTypes.cpp
-        DataTypes.h
-        main.cpp
-        Utils.cpp
-        Utils.h)
+add_executable(project_jj main.cpp DataTypes.cpp DataTypes.h Utils.cpp Utils.h)
