--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(project_jj main.cpp project_jj_lib/DataTypes.cpp project_jj_lib/D
 #   in order to BUILD executable for testing in project
 #   ADD following command in CMakeLists.txt of project,
 #   given new structure of project (Catch_tests and project_jj_lib directories added ...)
-add_executable(Catch_tests_run Catch_tests/AbsoluteTests.cpp project_jj_lib/DataTypes.cpp project_jj_lib/DataTypes.h project_jj_lib/Utils.cpp project_jj_lib/Utils.h project_jj_lib/Stack.cpp project_jj_lib/Stack.h project_jj_lib_part2/Datatypes_part2.cpp project_jj_lib_part2/Datatypes_part2.h)
+add_executable(Catch_tests_run Catch_tests/AbsoluteTests.cpp project_jj_lib_part2/Vector.cpp project_jj_lib_part2/List.cpp)
 
 #   in order to RUN tests
 #   CREATE CONFIGURATION following path: Run > Edit Configurations > Templates > Catch
